--- a/text.html
+++ b/text.html
@@ -13,12 +13,12 @@
 <body>
     <article class="text">
         <h1>Адреса Интернета</h1>
-            <p><a href="/text2.html#pr1">1. Введение</a></p>
-            <p><a href="/text2.html#pr2">2. Универсальные идентификаторы</a></p>
-            <p><a href="/text2.html#pr3">3. Три основных класса IP-адресов</a></p>
-            <p><a href="/text2.html#pr4">4. Адреса описывают сетевые соединения</a></p>
-            <p><a href="/text2.html#pr5">5. Сетевые и широковещательные адреса</a></p>
-            <p><a href="/text2.html#pr6">6. Ограниченное широковещание</a></p>
+            <p><a href="text2.html#pr1">1. Введение</a></p>
+            <p><a href="text2.html#pr2">2. Универсальные идентификаторы</a></p>
+            <p><a href="text2.html#pr3">3. Три основных класса IP-адресов</a></p>
+            <p><a href="text2.html#pr4">4. Адреса описывают сетевые соединения</a></p>
+            <p><a href="text2.html#pr5">5. Сетевые и широковещательные адреса</a></p>
+            <p><a href="text2.html#pr6">6. Ограниченное широковещание</a></p>
 </article>
 </body>
 </html>
